--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,9 +80,11 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | 鄂ICP备15009294号
                     <br>
-                                    </p>
+				
+                 </p>
+
             </div>
         </div>
     </div>
